force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/AMEX_IFLY_Notification_for_QBR_Enrol__e.object-meta.xml
<CustomObject>
    <description>Amex Ifly Notification Sent to QCP System with the Required AMEX Fields- CRM 5645</description>
    <label>AMEX IFLY Notification for QBR Enrol</label>
    <pluralLabel>AMEX IFLY Notifications for QBR Enrol</pluralLabel>
</CustomObject>