force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <label>ABN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>