force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/Airline_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Airline_Eligibility__c</fullName>
    <label>Airline_Eligibility</label>
    <length>40</length>
    <type>Text</type>
</CustomField>