force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Address_Line_4__c</fullName>
    <label>Address Line 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>