force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Industry__c</fullName>
    <label>Company Industry</label>
    <length>1</length>
    <type>Text</type>
</CustomField>