force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Name__c</fullName>
    <label>AMEX_Company_Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>