force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Company_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Sub_Industry__c</fullName>
    <label>Company Sub Industry</label>
    <length>2</length>
    <type>Text</type>
</CustomField>