force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Company_Suburb__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Suburb__c</fullName>
    <label>Company Suburb</label>
    <length>40</length>
    <type>Text</type>
</CustomField>