force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Indicator__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Indicator__c</fullName>
    <label>AMEX_Indicator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>