force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Last_Name__c</fullName>
    <label>Decision Maker Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>