force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/AMEX_Salutation__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Salutation__c</fullName>
    <label>Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>