force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/Amex_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Amex_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>