force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/QBD__c.field-meta.xml
<CustomField>
    <fullName>QBD__c</fullName>
    <label>QBD</label>
    <length>40</length>
    <type>Text</type>
</CustomField>