force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/SME_Deal__c.field-meta.xml
<CustomField>
    <fullName>SME_Deal__c</fullName>
    <label>SME_Deal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>