force-app/main/default/objects/AMEX_IFLY_Notification_for_QBR_Enrol__e/fields/Travel_Agent__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agent__c</fullName>
    <label>Travel Agent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>